we can decode GIF !!

--- a/javascript/animator/test/index.html
+++ b/javascript/animator/test/index.html
@@ -3,8 +3,13 @@
 <head>
     <script type="text/javascript" src="./js/animator.js"></script>
 </head>
+    <div id="black">
+    </div>
     <div id="animation">
     </div>
+    <script type="text/javascript">
+        Animator("black", "./img/black.gif").animate();
+    </script>
     <script type="text/javascript">
         Animator("animation", "./img/animation.gif").animate();
     </script>
