Add show frame test

--- a/javascript/animator/test/index.html
+++ b/javascript/animator/test/index.html
@@ -7,10 +7,15 @@
     </div>
     <div id="animation">
     </div>
+    <div id="frame">
+    </div>
     <script type="text/javascript">
         Animator("black", "./img/black.gif").animate();
     </script>
     <script type="text/javascript">
         Animator("animation", "./img/animation.gif").animate();
+    </script>
+    <script type="text/javascript">
+        Animator("frame", "./img/animation.gif").show(5);
     </script>
 </html>
