--- a/javascript/animator/test/index.html
+++ b/javascript/animator/test/index.html
@@ -3,6 +3,7 @@
 <head>
     <script type="text/javascript" src="./js/animator.js"></script>
 </head>
+<body style="background-color:#aaa;">
     <div id="black">
     </div>
     <div id="animation">
@@ -16,6 +17,7 @@
         Animator("animation", "./img/animation.gif").animate();
     </script>
     <script type="text/javascript">
-        Animator("frame", "./img/animation.gif").show(5);
+        Animator("frame", "./img/animation.gif").show(6);
     </script>
+</body>
 </html>
